fixed header and styled page

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #fffeff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+*, *::after, *::before {
+  box-sizing: border-box;
 }
